fix(ai-agent): contain tool errors as JSON, fix ObjectMapper escaping
ToolExecutor.execute() now catches all exceptions and returns error JSON instead of propagating,
with null/missing-field checks returning structured errors. FetchPageTool and WebSearchTool
replace string-concatenation error returns with an objectMapper.writeValueAsString helper to
handle special characters safely. AgentServiceTest uses getFirst() instead of get(0).

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>